# interpolatedstring-perl6

./: LICENSE  README  Setup.hs  interpolatedstring-perl6.cabal
src/Text/InterpolatedString/: Perl6.hs
tests/: Test.hs  TestRewrite.hs
