Name:          interpolatedstring-perl6
Version:       1.0.0
License:       PublicDomain
License-file:  LICENSE
Category:      Data
Author:        Audrey Tang
Copyright:     Audrey Tang
Maintainer:    Audrey Tang <audreyt@audreyt.org>
Stability:     stable
Cabal-Version: >= 1.6
Build-Type:    Custom
Synopsis:      QuasiQuoter for Perl6-style multi-line interpolated strings
Description:   QuasiQuoter for Perl6-style multi-line interpolated strings with \"q\", \"qq\" and \"qc\" support.
Data-Files:    tests/Test.hs

Source-Repository head
    type: git
    location: git://github.com/audreyt/interpolatedstring-perl6.git

library
    extensions:      TemplateHaskell, TypeSynonymInstances, FlexibleInstances, UndecidableInstances, OverlappingInstances
    build-depends:   base > 4 && < 5, template-haskell >= 2.5, haskell-src-meta >= 0.3, text, bytestring
    hs-source-dirs:  src
    exposed-modules: Text.InterpolatedString.Perl6
